# patron-criteria

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
config/: asgi.py  service_settings.py
docs/: about.md  index.md
src/shared/adapters/: connection.py
src/shared/domain/: filters.py
src/shared/primary_adapters/: commands.py
src/users/: utils.py
src/users/adapters/api/: serializers.py  views.py
src/users/adapters/db/: selectors.py
src/users/app/: user.py
src/users/models/: domain.py  interfaces.py
