[tool.poetry]
name = "patron-criteria"
version = "0.1.0"
description = "implementation of patron criteria"
authors = ["alex-ib <alejo1ibarra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
